--- a/gs-derivationsimporter/pom.xml
+++ b/gs-derivationsimporter/pom.xml
@@ -10,12 +10,52 @@
     </parent>
 
     <artifactId>gsderivationsimporter</artifactId>
+    <name>GalloSicilian-Derivations importer</name>
     <description>Extract derivations from a derivations file and put them in a OWL ontology which must contain the derivation lemmas.</description>
     <dependencies>
         <dependency>
             <groupId>it.unict.gallosiciliani</groupId>
-            <artifactId>derivations</artifactId>
+            <artifactId>importing</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>it.unict.gallosiciliani</groupId>
+            <artifactId>gs</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.17</version>
+        </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <mainClass>
+                                        it.unict.gallosiciliani.gs.derivationsimporter.Main
+                                    </mainClass>
+                                </manifest>
+                            </archive>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
